# beta_OOP_course_work

./: README.md  pyproject.toml
src/: API_for_vacancies.py  add_to_json.py  main.py  vacancies.py
